<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80545454"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="800">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp">


            <LinearLayout
                android:id="@+id/titleFame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/single_marquee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textColor="@color/_141414"
                    android:textSize="18sp"
                    app:strokeJoinStyle="miter" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:elevation="1dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                        android:textColor="@color/_595959"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toTopOf="@+id/btnOk"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleFame" />
                </FrameLayout>

            </LinearLayout>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/bg_dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:visibility="gone"
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:background="@drawable/bg_btn_loading_yes"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/ok"
                android:layout_marginVertical="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.36:0.44"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleFame" />

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="24dp"
                android:background="@drawable/bg_8_color"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/tv_yes"
                android:textSize="16sp"
                android:textColor="@color/app_color"
                app:layout_constraintBottom_toTopOf="@+id/native_ads"
                app:layout_constraintDimensionRatio="1.36:0.44"
                app:layout_constraintEnd_toStartOf="@+id/btnNo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleFame" />

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_btn_loading_yes"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/no"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintDimensionRatio="1.36:0.44"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnYes"
                app:layout_constraintTop_toTopOf="@+id/btnYes" />

            <FrameLayout
                android:id="@+id/native_ads"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <include layout="@layout/ads_shimmer_avg2" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>