<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvBack"
            android:layout_width="32dp"
            android:elevation="1dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_back_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.ocmaker.fullbody.creator.utils.StrokeAppCompatTextView
            android:id="@+id/titleSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:singleLine="true"
            android:freezesText="true"
            android:layout_marginHorizontal="80dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imvBack"
            android:fontFamily="@font/cherry_bomb_one_regular"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:strokeColor="@color/app_color"
            app:strokeJoinStyle="miter"
            app:strokeMiter="5dp"
            app:strokeWidth="2dp"
            style="@style/single_marquee"
            />
        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_16_color"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/imvBack">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:tint="@color/white"
                android:src="@drawable/ic_lang_set" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/ic_more_set"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llRateUs"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_16_color"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llLanguage">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:tint="@color/white"
                android:src="@drawable/ic_reate_set" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/ic_more_set"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_16_color"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llRateUs">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:tint="@color/white"
                android:src="@drawable/ic_share_set" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/share_app"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/ic_more_set"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_16_color"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llShareApp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:tint="@color/white"
                android:src="@drawable/ic_policy_set" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/privacy_amp_policy"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                android:src="@drawable/ic_more_set"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>