<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:elevation="1dp"
            android:src="@drawable/ic_back_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvEdit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/imv_edit_2"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imvBack" />
<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/imvDelete"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:src="@drawable/imv_delete"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/imvBack"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/imvBack" />-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/llBottom"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imvBack"
            app:strokeWidth="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="48dp"
            android:visibility="visible"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/imvDelete"
            tools:layout_editor_absoluteX="8dp">

            <LinearLayout
                android:id="@+id/btnEditShareAll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_share_view"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp">

                <!--                <ImageView-->
                <!--                    android:layout_width="24dp"-->
                <!--                    android:layout_height="24dp"-->
                <!--                    android:src="@drawable/ic_share_my_creation" />-->

                <TextView
                    android:id="@+id/tvEditShare"
                    style="@style/single_marquee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito_medium"
                    android:marqueeRepeatLimit="3"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnDownload"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_share_view"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp">

                <!--                <ImageView-->
                <!--                    android:layout_width="24dp"-->
                <!--                    android:layout_height="24dp"-->
                <!--                    android:src="@drawable/ic_download_mywork" />-->

                <TextView
                    android:id="@+id/tvDownload"
                    style="@style/single_marquee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito_medium"
                    android:marqueeRepeatLimit="3"
                    android:singleLine="true"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/imvDelete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"

            android:background="@drawable/bg_delete_view"
            android:fontFamily="@font/nunito_medium"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/llBottom"
            app:layout_constraintStart_toStartOf="@+id/llBottom"
           />
        <!--    flNativeCollab-->
        <FrameLayout
            android:id="@+id/flNativeCollab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <include layout="@layout/ads_shimmer_collap_native" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>